[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pandas = "^1.4.4"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = {extras = ["email"], version = "^1.10.2"}
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
requests = "^2.28.1"
pytest = "^7.1.3"
orjson = "^3.8.0"
peewee = "^3.15.2"
databases = "^0.6.1"
azure-identity = "^1.10.0"
azure-keyvault-secrets = "^4.5.1"
aiohttp = "^3.8.1"
locust = "^2.12.0"
mongoengine = "^0.24.2"
httpx = "^0.23.0"
pyodbc = "^4.0.34"
azure-functions = "^1.11.2"
Markdown = "^3.4.1"
openpyxl = "^3.0.10"
plotly = "^5.10.0"
ipywidgets = "^8.0.2"
shiny = "^0.2.6"
pyarrow = "^9.0.0"
azure-storage-blob = "^12.14.0"
cookiecutter = "^2.1.1"
Kivy = "^2.1.0"
Tree = "^0.2.4"
cruft = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
